# ExtractTableFromPDF

./: pyproject.toml
