[tool.poetry]
name = "extracttablefrompdf"
version = "0.1.0"
description = ""
authors = ["Satoshi"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
camelot-py = "^0.11.0"
ipykernel = "^6.21.3"
opencv-python = "^4.7.0.72"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
